--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="profile">
-        <h1 data-testid="slackUserName">Opillo 1000</h1>
-        <img src="Alexander.jpeg" alt="Opillo 1000" data-testid="slackDisplayImage">
+        <h1 data-testid="slackUserName">Opillo1000</h1>
+        <img src="Alexander.jpeg" alt="Opillo1000" data-testid="slackDisplayImage">
         <p data-testid="currentDayOfTheWeek"></p>
         <p data-testid="currentUTCTime"></p>
-        <p data-testid="myTrack">Frontend</p>
+        <p data-testid="myTrack"><strong>Frontend</strong></p>
         <a href="https://github.com/Alexylash/MyProject_HNG" data-testid="githubURL">GitHub Repository</a>
     </div>
 
